trunk/Archive2/21/8f37c9060ed0c9/output
main.cpp:2:31: warning: 'const volatile' type qualifiers on return type have no effect [-Wignored-qualifiers]
    int inline long constexpr volatile static unsigned const long foo();
                              ^~~~~~~~~                ~~~~~~
main.cpp:2:40: error: function declared in block scope cannot have 'static' storage class
    int inline long constexpr volatile static unsigned const long foo();
                                       ^
main.cpp:2:9: error: inline declaration of 'foo' not allowed in block scope
    int inline long constexpr volatile static unsigned const long foo();
        ^~~~~~~
1 warning and 2 errors generated.
